[gd_scene load_steps=3 format=3 uid="uid://utsjrli2iinq"]

[ext_resource type="Script" path="res://scenes/UI/pause_menu.gd" id="1_1pibt"]
[ext_resource type="Texture2D" uid="uid://qfbbdppvd4db" path="res://assets/interfaz/controles.png" id="2_frf8t"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1pibt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Reanudar" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reanudar"

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Men√∫ principal"

[node name="Controles" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controles"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(64, 155)
scale = Vector2(0.229977, 0.229977)
texture = ExtResource("2_frf8t")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Reanudar" to="." method="_on_reanudar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
